--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,95 @@
 /* Add CSS styling here */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+header{
+    background-color:darkslategrey;
+    padding:20px;
+    margin-bottom: 15px;
+
+}
+
+footer{
+    background-color:darkslateblue;
+    text-align:center;
+    padding:20px;
+}
+.social{
+    display:flex;
+    flex-flow:row wrap;
+    justify-content:space-around;
+    padding:20px;
+    
+    
+} 
+
+.firstsection{
+    display:flex;
+    flex-direction:row;
+    justify-content:center;
+}
+
+.bio{
+    padding:20px;
+    width:40%;
+}
+
+.row{
+   display:flex;
+   justify-content:space-evenly;
+   flex-direction:row;
+   padding:20px;
+}
+
+.portfolio-element{
+    text-align:center;
+    }
+
+nav.social{
+        display:flex;
+        justify-content: space-between;
+        margin-top:10%;
+    } 
+
+   
